--- a/index.html
+++ b/index.html
@@ -326,5 +326,14 @@
             });
         });
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKTS3VT3XS"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-EKTS3VT3XS');
+    </script>
 </body>
 </html>
