--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monster Survivors - Survive the Monster Apocalypse | Play Online</title>
     <meta name="description" content="Play Monster Survivors online for free. Survive waves of monsters, upgrade your character, and become the ultimate survivor in this thrilling action game.">
+    <meta name="keywords" content="Monster Survivor, online game, survival game, free game, monster game, casual game, decompression game">
+    <meta name="author" content="MonsterSurvivors.com">
     <link rel="canonical" href="https://monstersurvivors.com/">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
